// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/avatar should not render when no props 1`] = `
<div
  className="cc-avatar-wrapper"
>
  <div
    className="cc-avatar cc-avatar-initials"
    style={Object {}}
  />
</div>
`;

exports[`components/avatar should render with initial when no photo 1`] = `
<div
  className="cc-avatar-wrapper"
>
  <div
    className="cc-avatar cc-avatar-initials"
    style={
      Object {
        "background": "#42910e",
      }
    }
  >
    <span>
      B
    </span>
  </div>
</div>
`;

exports[`components/avatar should render with photo 1`] = `
<div
  className="cc-avatar-wrapper"
>
  <div
    className="cc-avatar cc-avatar-image"
    style={Object {}}
  >
    <img
      alt="Benjamin"
      loading="lazy"
      src="https://p.url"
    />
  </div>
</div>
`;
